--- a/Web/Views/Shared/_FontPageLayout.cshtml
+++ b/Web/Views/Shared/_FontPageLayout.cshtml
@@ -9,8 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>@ViewBag.Title</title>
     <link href="~/Content/Css/FrontPage.css" rel="stylesheet" />
-    @RenderSection("css",false)
-    @RenderSection("js",false)
+    <link href="~/Content/Css/normalize.css" rel="stylesheet" />
+    @RenderSection("css", false)
+    @RenderSection("js", false)
 </head>
 <body>
     <div class="index-head-menu">
