--- a/Web/Views/FontPage/Index.cshtml
+++ b/Web/Views/FontPage/Index.cshtml
@@ -1,8 +1,201 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "首页";
     Layout = "~/Views/Shared/_FontPageLayout.cshtml";
 }
 
-<h2>Index</h2>
+@section css{
+    <link href="~/Scripts/Swiper-4.5.0/css/swiper.min.css" rel="stylesheet" />
+    <style>
+        .body-content {
+            width: 100%;
+            height: 100%;
+        }
 
+        .top-img-box {
+            display: flex;
+        }
+
+            .top-img-box img {
+                width: 100%;
+            }
+
+        .enterprise-info-box {
+            padding: 80px 150px;
+            height: 380px;
+            display: flex;
+            align-items: stretch;
+        }
+
+
+        .enterprise-info-box-head {
+            color: white;
+            background-color: #162F67;
+            height: 100%;
+            padding: 0 20px;
+            flex-shrink: 0;
+        }
+
+        .enterprise-info-swiper {
+            flex-grow: 1;
+            width: 0;
+            flex-shrink: 0;
+        }
+
+        #enterprise-info-next {
+            height: 100%;
+            width: 40px;
+            background-color: #E2E9EF;
+            padding: 0 5px;
+            display: flex;
+            align-items: center;
+        }
+
+        .enterprise-info-swiper .swiper-slide {
+            overflow: hidden;
+            position: relative;
+        }
+
+            .enterprise-info-swiper .swiper-slide > img {
+                width: 100%;
+                position: absolute;
+                z-index: -1;
+            }
+
+        .enterprise-info-slide-text {
+            display: flex;
+            flex-direction: column;
+            height: 100%
+        }
+
+
+            .enterprise-info-slide-text .text-top {
+                flex-grow: 1;
+                height: 0;
+                overflow: hidden;
+                background-color: rgba(255,255,255,0.5);
+                position: relative;
+                left: -100%;
+                transition: left 0.5s;
+                display:flex;
+                padding:20px 10px;
+                align-items:center;
+                text-indent:2em;
+                font-size:14px;
+                line-height:18px;
+            }
+
+        .enterprise-info-swiper .swiper-slide:hover .text-top {
+            left: 0;
+        }
+
+        .enterprise-info-slide-text .text-bottom {
+            flex-shrink: 0;
+            height: 60px;
+            padding-top: 20px;
+            padding-left: 30px;
+            display: flex;
+            background-color: rgba(255,255,255,0.5);
+            font-size: 18px;
+        }
+
+            .enterprise-info-slide-text .text-bottom > div {
+                height: 100%;
+                border-top: 1px solid #162F67;
+                display: flex;
+                align-items: center;
+            }
+
+        #enterprise-info-next img {
+            width: 100%;
+        }
+
+        .news-center-box {
+            width: 100%;
+            height: 100px;
+            background: linear-gradient(90deg,#ffffff 40px,#F8F8F8 40px,#F8F8F8 100%);
+        }
+       
+    </style>
+}
+@section js{
+    <script src="~/Scripts/JQuery/jquery-1.11.3.min.js"></script>
+    <script src="~/Scripts/Swiper-4.5.0/js/swiper.min.js"></script>
+    <script>
+        $(function () {
+            var swiper = new Swiper('.enterprise-info-swiper', {
+                slidesPerView: 3,
+                spaceBetween: 0,
+                navigation: {
+                    nextEl: '#enterprise-info-next',
+                },
+                loop: true,
+            });
+        });
+    </script>
+}
+<div class="body-content">
+    <div class="top-img-box"><img src="https://dummyimage.com/2400x600" /></div>
+    <div class="enterprise-info-box">
+        <div class="enterprise-info-box-head">
+            <div style="font-size:16px;margin-top:50px;">
+                企业概况
+            </div>
+            <div style="font-size:12px;margin-top:10px">ENTERPRISE SURVEY</div>
+            <div style="height:2px;width:20px; background-color:white;margin-top:10px"></div>
+        </div>
+        <div class="enterprise-info-swiper swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="https://dummyimage.com/600x400/3f6" />
+                    <div class="enterprise-info-slide-text">
+                        <div class="text-top">
+                            设置为true 则开启loop模式。loop模式：会在原本slide前后复制若干个slide(默认一个)并在合适的时候切换，让Swiper看起来是循环的。
+                            loop模式在与free模式同用时会产生抖动，因为free模式下没有复制slide的时间点。
+                        </div>
+                        <div class="text-bottom">
+                            <div>
+                                企业简介
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://dummyimage.com/600x400/66ccff" />
+                    <div class="enterprise-info-slide-text">
+                        <div class="text-top">
+                            设置为true 则开启loop模式。loop模式：会在原本slide前后复制若干个slide(默认一个)并在合适的时候切换，让Swiper看起来是循环的。
+                            loop模式在与free模式同用时会产生抖动，因为free模式下没有复制slide的时间点。
+                        </div>
+                        <div class="text-bottom">
+                            <div>
+                                经理致辞
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://dummyimage.com/600x400/ff9900" />
+                    <div class="enterprise-info-slide-text">
+                        <div class="text-top">
+                            设置为true 则开启loop模式。loop模式：会在原本slide前后复制若干个slide(默认一个)并在合适的时候切换，让Swiper看起来是循环的。
+                            loop模式在与free模式同用时会产生抖动，因为free模式下没有复制slide的时间点。
+                        </div>
+                        <div class="text-bottom">
+                            <div>
+                                组织机构
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="enterprise-info-next">
+            <img src="~/Content/Images/arrow-right-white.png" />
+        </div>
+    </div>
+
+    <div class="news-center-box">
+        <div class="news-center-box-back"></div>
+    </div>
+</div>
