--- a/Web/Views/FontPage/Index.cshtml
+++ b/Web/Views/FontPage/Index.cshtml
@@ -7,6 +7,17 @@
 @section css{
     <link href="~/Scripts/Swiper-4.5.0/css/swiper.min.css" rel="stylesheet" />
     <style>
+        .text-title {
+            font-size: 24px;
+            font-weight: 600;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #162F67;
+            display:inline-block;
+        }
+        .line {
+            height: 1px;
+            background-color: #DCDCDC;
+        }
         .body-content {
             width: 100%;
             height: 100%;
@@ -112,10 +123,26 @@
 
         .news-center-box {
             width: 100%;
-            height: 100px;
             background: linear-gradient(90deg,#ffffff 40px,#F8F8F8 40px,#F8F8F8 100%);
         }
-       
+        .news-center-box-title {
+        padding-left:150px;
+        padding-top:10px;
+        }
+        .news-center-box-content {
+        padding:20px 150px 50px 150px;
+        display:flex;
+        align-items:stretch;
+        }
+        .news-center-box-content-left {
+        width:45%;
+        }
+            .news-center-box-content-left img {
+            width:100%;
+            }
+            .news-center-box-content-right {
+                width: 55%;
+            }
     </style>
 }
 @section js{
@@ -196,6 +223,29 @@
     </div>
 
     <div class="news-center-box">
-        <div class="news-center-box-back"></div>
+        <div class="news-center-box-title">
+            <div class="text-title">新闻中心</div>
+        </div>
+        <div class="line"></div>
+        <div class="news-center-box-content">
+            <div class="news-center-box-content-left">
+                <div>
+                    <img src="https://dummyimage.com/400x200" />
+                </div>
+                <div>
+                    【万家城市广场】
+                </div>
+                <div>
+                    发布者:万家  浏览次数:999
+                </div>
+                <div>
+                    设置为true 则开启loop模式。loop模式：会在原本slide前后复制若干个slide(默认一个)并在合适的时候切换，让Swiper看起来是循环的。
+                    loop模式在与free模式同用时会产生抖动，因为free模式下没有复制slide的时间点。
+                </div>
+            </div>
+            <div class="news-center-box-content-right">
+
+            </div>
+        </div>
     </div>
 </div>
