--- a/Web/Content/Css/FrontPage.css
+++ b/Web/Content/Css/FrontPage.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    flex-shrink:0;
 }
 
 html,
@@ -15,8 +16,27 @@ overflow-x:hidden;
 display:flex;
 flex-direction:column;
 }
+.one-line-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
+.multi-line2 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
 
+.blackmodal {
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
 /*头部菜单*/
 
 .index-head-menu {
