--- a/Web/Views/Shared/_FontPageLayout.cshtml
+++ b/Web/Views/Shared/_FontPageLayout.cshtml
@@ -27,11 +27,12 @@
             <div>
                 企业概况
                 <div class="index-head-list-hidemenu">
-                    <div>经理致辞</div>
                     <div>企业简介</div>
+                    <div>董事长致辞</div>
+                    <div>发展规划</div>
+                    <div>企业文化</div>
                     <div>组织机构</div>
                     <div>企业荣誉</div>
-                    <div>企业文化</div>
                 </div>
             </div>
             <div>新闻中心</div>
