--- a/Web/Views/FontPage/EnterPriseIntroduction.cshtml
+++ b/Web/Views/FontPage/EnterPriseIntroduction.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_FontPageLayout.cshtml";
 }
 @section css{
+    <link href="~/Scripts/Swiper-4.5.0/css/swiper.min.css" rel="stylesheet" />
     <style>
         .body-content {
             width: 100%;
@@ -113,135 +114,398 @@
             padding: 0 200px;
             margin-top: 60px;
             min-height: 400px;
-            display:flex;
-            align-content:stretch;
+            display: flex;
+            align-content: stretch;
         }
+
             .introduce-content-box .content {
                 flex-grow: 1;
                 padding: 65px 40px 100px 80px;
                 width: 0;
                 background-color: #F1F0F0;
             }
+
             .introduce-content-box .image {
-            width:700px;
-            background-size:cover;
-            background-repeat:no-repeat;
-            background-image:url('/Content/pcimage/5.jpg');
+                width: 700px;
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-image: url('/Content/pcimage/5.jpg');
             }
-/*发展计划*/
+        /*发展计划*/
         .devplan {
             margin-top: 160px;
             background-color: #4B679F;
-            padding:70px 300px 30px 300px;
+            padding: 50px 200px 30px 200px;
         }
+
         .devplan-title {
             font-size: 28px;
             font-weight: normal;
             color: rgba(255,255,255,1);
-            display:flex;
-            flex-direction:column;
-            align-items:center;
-            letter-spacing:3px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            letter-spacing: 3px;
         }
+
         .devplan-content {
-        margin-top:20px;
-        display:flex;
-        align-items:stretch;
+            margin-top: 20px;
+            display: flex;
+            align-items: stretch;
         }
+
         .devplan-content-left {
-        width:300px;
+            width: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
+
             .devplan-content-left > div {
                 text-align: center;
                 padding: 5px 0;
                 color: #BFBFBF;
                 font-size: 26px;
             }
-            .devplan-content-left > div.current {
-            color:white;
-            font-size:30px;
-            }
-            .devplan-content-right {
-                width: 0;
-                flex-grow: 1;
-                color: white;
-            }
+
+                .devplan-content-left > div.current {
+                    color: white;
+                    font-size: 30px;
+                }
+
+        .devplan-content-right {
+            width: 0;
+            flex-grow: 1;
+            color: white;
+        }
+
         .devplan-image {
-        height:200px;
+            height: 200px;
+            background-image: url('/Content/pcimage/6.jpg');
+            background-size: cover;
+        }
+
+        .devplan-text-title {
+            font-size: 24px;
+            color: rgba(255,255,255,1);
+            margin-top: 30px;
+        }
+
+        .devplan-text-content {
+            margin-top: 20px;
+            font-size: 16px;
+            padding-bottom: 20px;
+        }
+        /*企业文化*/
+        .commtitle > div {
+            display: flex;
+            justify-content: center;
+        }
+
+        .commtitle > .cname {
+            display: flex;
+            align-items: center;
+        }
+
+            .commtitle > .cname > .line {
+                height: 2px;
+                background-color: rgba(102,102,102,0.4);
+                width: 80px;
+            }
+
+            .commtitle > .cname > .text {
+                font-size: 26px;
+                color: rgba(51,51,51,1);
+                margin: 0 30px;
+            }
+
+        .commtitle > .ename {
+            color: #999999;
+            font-size: 22px;
+            margin-top: 15px;
+        }
+
+        .corporate-culture {
+            margin-top: 100px;
+        }
+
+        .corporate-culture-banner {
+            display: flex;
+            align-items: center;
+            padding: 0 150px;
+            margin-top: 80px;
+        }
+
+        .swiper-nav {
+            height: 100%;
+            width: 30px;
+            display: flex;
+            align-items: center;
+        }
+
+            .swiper-nav img {
+                width: 100%;
+            }
+
+        #corporatebanner {
+            height: 500px;
+            flex: 1;
+            width: 0;
+        }
+
+        .corporatebanner-control {
+            display: flex;
+        }
+
+        .corporate-image {
+            background-size: cover;
+            height: 450px;
+            width: 380px;
+        }
+
+        .swiper-slide:not(.swiper-slide-active) {
+            transform: scale(0.8);
+        }
+
+        .corporate-image-modal {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.4);
+            color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            display: none;
+        }
+
+        .swiper-slide-active .corporate-image-modal {
+            display: flex;
+        }
+
+        .corporate-image-modal .title {
+            font-size: 30px;
+        }
+
+        .corporate-image-modal .text {
+            font-size: 22px;
+            margin-top: 20px;
+        }
+        /*企业荣誉*/
+        .enterprise-honor {
+            margin-top: 120px;
+            margin-bottom: 100px;
+        }
+
+        .honor-box {
+            margin-top: 120px;
+            padding: 0 200px;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .bonor-item {
+            width: 260px;
+            height: 350px;
+        }
+
+        .honor-image {
+            padding: 40px;
+            border: 2px solid rgba(221,221,221,1);
+        }
+
+            .honor-image img {
+                max-width: 100%;
+                max-height: 100%
+            }
+
+        .honor-text {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
         }
     </style>
 }
-    <div class="body-content">
-        <div class="top-img-box"><img src="~/Content/pcimage/1.jpg" /></div>
-        <div class="top-introduce">
-            <div class="introduce-content-tab">
-                <div>
-                    <div class="alive-text">
-                        企业简介
-                    </div>
-                    <div class="alive-circle">
-                        <div class="blank"></div>
-                        <div class="circle"></div>
-                        <div class="line"></div>
-                    </div>
+@section js{
+    <script src="~/Scripts/JQuery/jquery-1.11.3.min.js"></script>
+    <script src="~/Scripts/Swiper-4.5.0/js/swiper.min.js"></script>
+    <script>
+        $(function () {
+            new Swiper('#corporatebanner', {
+                slidesPerView: 3,
+                spaceBetween: 50,
+                centeredSlides: true,
+                navigation: {
+                    prevEl: "#bannerprevEl",
+                    nextEl: '#bannernextEl',
+                },
+                loop: true,
+            });
+        })
+
+    </script>
+}
+<div class="body-content">
+    <div class="top-img-box"><img src="~/Content/pcimage/1.jpg" /></div>
+    <div class="top-introduce">
+        <div class="introduce-content-tab">
+            <div>
+                <div class="alive-text">
+                    企业简介
                 </div>
-                <div>
-                    <div class="disable-text">董事长致辞</div>
-                    <div class="disable-circle">
-                        <div class="line"></div>
-                        <div class="circle"></div>
-                        <div class="blank"></div>
-                    </div>
+                <div class="alive-circle">
+                    <div class="blank"></div>
+                    <div class="circle"></div>
+                    <div class="line"></div>
                 </div>
             </div>
+            <div>
+                <div class="disable-text">董事长致辞</div>
+                <div class="disable-circle">
+                    <div class="line"></div>
+                    <div class="circle"></div>
+                    <div class="blank"></div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="introduce-content-box">
+        <div class="content">
+            <div style="font-size:24px;color:rgba(51,51,51,1);">万佳城市广场</div>
+            <div style="width:150px;height:1px;background-color:#E1C69C;margin-top:25px;"></div>
+            <div style="margin-top:45px;font-size:16px;color:rgba(102,102,102,1);line-height:24px;">
+                万佳城市广场由万达公馆、万佳复式公寓、大丰中心写字楼、
+                超级购物中心、大型生活超市等核心板块构成，形成了其独特的
+                “一座万佳城市广场，一个城市中心”的新商业组合。集合全球优质资源，
+                颠覆大丰城市商业格局，成就城市高端生活圈，荣铸专属顶级生活平台。
+                更有“世界500强万达旗下万达嘉华酒店、万达巨幕影城 ”等多重主力店助力。
+                万佳城市广场由万达公馆、万佳复式公寓、大丰中心写字楼、超级购物中心、
+                大型生活超市等核心板块构成，形成了其独特的“一座万佳城市广场，一个城市中心”的新商业组合。
+            </div>
+        </div>
+        <div class="image">
 
         </div>
-        <div class="introduce-content-box">
-            <div class="content">
-                <div style="font-size:24px;color:rgba(51,51,51,1);">万佳城市广场</div>
-                <div style="width:150px;height:1px;background-color:#E1C69C;margin-top:25px;"></div>
-                <div style="margin-top:45px;font-size:16px;color:rgba(102,102,102,1);line-height:24px;">
-                    万佳城市广场由万达公馆、万佳复式公寓、大丰中心写字楼、
-                    超级购物中心、大型生活超市等核心板块构成，形成了其独特的
-                    “一座万佳城市广场，一个城市中心”的新商业组合。集合全球优质资源，
-                    颠覆大丰城市商业格局，成就城市高端生活圈，荣铸专属顶级生活平台。
-                    更有“世界500强万达旗下万达嘉华酒店、万达巨幕影城 ”等多重主力店助力。
-                    万佳城市广场由万达公馆、万佳复式公寓、大丰中心写字楼、超级购物中心、
-                    大型生活超市等核心板块构成，形成了其独特的“一座万佳城市广场，一个城市中心”的新商业组合。
-                </div>
-            </div>
-            <div class="image">
-
-            </div>
-        </div>
-        <div class="devplan">
-            <div class="devplan-title">
+    </div>
+    <div class="devplan">
+        <div class="devplan-title">
             发展规划
-                <div style="height:3px;width:50px; background-color:white;margin-top:30px;"></div>
+            <div style="height:3px;width:50px; background-color:white;margin-top:30px;"></div>
+        </div>
+        <div class="devplan-content">
+            <div class="devplan-content-left">
+                <div><img src="~/Content/Images/arrow-up-white.png" style="height:30px;" /> </div>
+                <div class="current">2019-2020</div>
+                <div>2017-2018</div>
+                <div>2016-2017</div>
+                <div>2015-2016</div>
+                <div>2010-2016</div>
+                <div><img src="~/Content/Images/arrow-up-white.png" style="height:30px;transform:rotateX(180deg)" /></div>
             </div>
-            <div class="devplan-content">
-                <div class="devplan-content-left">
-                    <div><img src="~/Content/Images/arrow-up-white.png" style="height:30px;" /> </div>
-                    <div class="current">2019-2020</div>
-                    <div>2017-2018</div>
-                    <div>2016-2017</div>
-                    <div>2015-2016</div>
-                    <div>2010-2016</div>
-                    <div><img src="~/Content/Images/arrow-up-white.png" style="height:30px;transform:rotateX(180deg)" /></div>
-                </div>
-                <div class="devplan-content-right">
-                    <div class="devplan-image"></div>
-                    <div class="devplan-text-title">取得行业排名前五的好成绩</div>
-                    <div class="devplan-text-content">
-                        物流的概念最早是在美国形成的，起源于20世纪30年代，原意为“实物分配”或“货物配送”。1963年被引入日本，日文意思是“物的流通”。20世纪70年代后，日本的“物流”一词逐渐取代了“物的流通”。
-                        中国的“物流”一词是从日文资料引进来的外来词，源于日文资料中对"Logistics"一词的翻译“物流”。
-                        中国的物流术语标准将物流定义为：物流是物品从供应地向接收地的实体流动过程中，根据实际需要，将运输、储存、装卸搬运、包装、流通加工、配送、信息处理等功能有机结合起来实现用户要求的过程。
-                        物流的概念最早是在美国形成的，起源于20世纪30年代，原意为“实物分配”或“货物配送”。1963年被引入日本，日文意思是“物的流通”。20世纪70年代后，日本的“物流”一词逐渐取代了“物的流通”。
-                        中国的“物流”一词是从日文资料引进来的外来词，源于日文资料中对"Logistics"一词的翻译“物流”。
-                        中国的物流术语标准将物流定义为：物流是物品从供应地向
-                        接收地的实体流动过程中，根据实际需要，将运输、储存、装卸搬运、包装、流通加工、配送、信息处理等功能有机结合起来实现用户要求的过程。
-                    </div>
+            <div class="devplan-content-right">
+                <div class="devplan-image"></div>
+                <div class="devplan-text-title">取得行业排名前五的好成绩</div>
+                <div class="devplan-text-content">
+                    物流的概念最早是在美国形成的，起源于20世纪30年代，原意为“实物分配”或“货物配送”。1963年被引入日本，日文意思是“物的流通”。20世纪70年代后，日本的“物流”一词逐渐取代了“物的流通”。
+                    中国的“物流”一词是从日文资料引进来的外来词，源于日文资料中对"Logistics"一词的翻译“物流”。
+
                 </div>
             </div>
         </div>
     </div>
+    <div class="corporate-culture">
+        <div class="commtitle">
+            <div class="cname">
+                <div class="line"></div>
+                <div class="text">企业文化</div>
+                <div class="line"></div>
+            </div>
+            <div class="ename">CORPORATE  CULTURE</div>
+        </div>
+        <div class="corporate-culture-banner">
+            <div id="bannerprevEl" class="swiper-nav">
+                <img style="transform:rotateY(180deg)" src="~/Content/Images/arrow-right-gray.png" />
+            </div>
+            <div id="corporatebanner" class="swiper-container">
+                <div class="swiper-wrapper corporatebanner-control">
+                    <div class="swiper-slide corporate-image" style="background-image:url('/Content/pcimage/7.jpg')">
+                        <div class="corporate-image-modal">
+                            <div class="title">理念</div>
+                            <div class="text">
+                                产业融合&nbsp;实体融合
+                            </div>
+                            <div class="text">
+                                经济融合&nbsp;金融融合
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide corporate-image" style="background-image:url('/Content/pcimage/8.jpg')">
+                        <div class="corporate-image-modal">
+                            <div class="title">理念</div>
+                            <div class="text">
+                                产业融合&nbsp;实体融合
+                            </div>
+                            <div class="text">
+                                经济融合&nbsp;金融融合
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide corporate-image" style="background-image:url('/Content/pcimage/9.jpg')">
+                        <div class="corporate-image-modal">
+                            <div class="title">理念</div>
+                            <div class="text">
+                                产业融合&nbsp;实体融合
+                            </div>
+                            <div class="text">
+                                经济融合&nbsp;金融融合
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="bannernextEl" class="swiper-nav">
+                <img src="~/Content/Images/arrow-right-gray.png" />
+            </div>
+        </div>
+    </div>
+    <div style="background-color:#F8F8F8;margin-top:150px;height:500px;">
+    </div>
+    <div class="enterprise-honor">
+        <div class="commtitle">
+            <div class="cname">
+                <div class="line"></div>
+                <div class="text">企业荣誉</div>
+                <div class="line"></div>
+            </div>
+            <div class="ename">ENTERPRISE  HONOR</div>
+        </div>
+
+        <div class="honor-box">
+            <div class="bonor-item">
+                <div class="honor-image">
+                    <img src="/Content/pcimage/19.jpg" />
+                </div>
+                <div class="honor-text">万佳城市广场文明示范荣誉证书</div>
+            </div>
+            <div class="bonor-item">
+                <div class="honor-image">
+                    <img src="/Content/pcimage/19.jpg" />
+                </div>
+                <div class="honor-text">万佳城市广场文明示范荣誉证书</div>
+            </div>
+            <div class="bonor-item">
+                <div class="honor-image">
+                    <img src="/Content/pcimage/19.jpg" />
+                </div>
+                <div class="honor-text">万佳城市广场文明示范荣誉证书</div>
+            </div>
+            <div class="bonor-item">
+                <div class="honor-image">
+                    <img src="/Content/pcimage/19.jpg" />
+                </div>
+                <div class="honor-text">万佳城市广场文明示范荣誉证书</div>
+            </div>
+        </div>
+    </div>
+</div>
