--- a/Web/Views/FontPage/Index.cshtml
+++ b/Web/Views/FontPage/Index.cshtml
@@ -28,12 +28,9 @@
 
         .top-img-box {
             height: 682px;
-            overflow: hidden;
+            background-image:url("/Content/pcimage/1.jpg");
+            background-size:cover;
         }
-
-            .top-img-box img {
-                width: 100%;
-            }
 
         /*企业概况*/
         .enterprise-info-box {
@@ -454,7 +451,7 @@
     </script>
 }
 <div class="body-content">
-    <div class="top-img-box"><img src="~/Content/pcimage/1.jpg" /></div>
+    <div class="top-img-box"></div>
     <div class="enterprise-info-box">
         <div class="enterprise-info-box-head">
             <div style="font-size:22px;margin-top:50px;">
