--- a/Web/Views/Shared/_FontPageLayout.cshtml
+++ b/Web/Views/Shared/_FontPageLayout.cshtml
@@ -39,7 +39,7 @@
             <div>楼盘风采</div>
             <div>营销网络</div>
             <div>信息反馈</div>
-            <div>会员系统</div>
+            <div>阳光采招</div>
             <div>联系我们</div>
         </div>
 
