--- a/Web/Views/FontPage/NewsCenter.cshtml
+++ b/Web/Views/FontPage/NewsCenter.cshtml
@@ -120,6 +120,7 @@
                 width: 0;
                 flex-grow: 1;
             }
+        /*分页*/
         .pagination{
             display:flex;
             justify-content:flex-end;
@@ -137,7 +138,7 @@
             cursor:pointer;
         }
         .gotoPage {
-            margin: 0 20px;;
+            margin: 0 20px;
             font-size: 18px;
         }
             .gotoPage > input {
