--- a/Web/Views/FontPage/RecruitmentTalents.cshtml
+++ b/Web/Views/FontPage/RecruitmentTalents.cshtml
@@ -153,6 +153,17 @@
             color: white;
             cursor: pointer;
         }
+        /*数据表格*/
+        .info-grid {
+            padding: 0 200px;
+            margin-top: 100px;
+        }
+        .grid-title {
+            font-size: 24px;
+        }
+        .datagrid {
+        margin-top:40px;
+        }
     </style>
 }
 <div class="body-content">
@@ -196,7 +207,20 @@
     </div>
     <div class="info-grid">
         <div class="grid-title">职位列表</div>
-        <div></div>
+        <div class="datagrid">
+            <table>
+                <tr class="gridth">
+                    <td>职位</td>
+                    <td>工作职能</td>
+                    <td>工作地点</td>
+                </tr>
+                <tr class="gridtd">
+                    <td>市场经理</td>
+                    <td>线下调研</td>
+                    <td>万佳公司总部</td>
+                </tr>
+            </table>
+        </div>
     </div>
     <div class="pagination">
         <div class="currentPage">1</div>
